// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selectInputField > should display right value on grouped options 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_12_"
          aria-describedby="_r_12_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_12_"
              aria-expanded="true"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4b8 uv_1xo4j4ba uv_1xo4j4be uv_1xo4j4bg"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_10_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4bm uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                Mercury
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <div
            class="uv_1hff1el1 uv_10e61c24"
            id="_r_12_"
            role="dialog"
            style="--uv_1eslcyd0: -5px; --uv_1eslcyd1: 0px; --uv_1eslcyd2: rotate(180deg); --uv_1eslcyd4: translate3d(0px, 4px, 0); --uv_1eslcyd5: 0ms; --uv_1eslcyd6: translate3d(0px, 4px, 0); --uv_1eslcyd7: 100%; --uv_1hff1el0: 100%; opacity: 1;"
          >
            <div
              class="uv_10e61c22"
            >
              <div
                class="uv_xf61n40 uv_xf61n42d"
              >
                <div
                  class="uv_1hff1elr uv_q9b75z1 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
                >
                  <div
                    class="uv_12pwfcp8 uv_12pwfcp6"
                    data-disabled="false"
                    data-error="false"
                    data-readonly="false"
                    data-success="false"
                  >
                    <div
                      class="uv_12pwfcp1 uv_xf61n40 uv_xf61n4d uv_xf61n42j"
                      data-size="medium"
                    >
                      <svg
                        aria-hidden="true"
                        class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz6 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz26"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                    <input
                      aria-invalid="false"
                      aria-label="search-bar"
                      class="uv_12pwfcp9"
                      data-size="medium"
                      data-testid="search-bar"
                      id="_r_2s_"
                      placeholder="Search in list"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  class="uv_1hff1el2 uv_xf61n40 uv_xf61n42d"
                  data-grouped="true"
                  id="select-dropdown"
                  role="listbox"
                >
                  <div
                    class="uv_1hff1el8 uv_xf61n40 uv_xf61n42d uv_xf61n45d"
                  >
                    <div
                      class="uv_1hff1el9"
                    >
                      <button
                        class="uv_1hff1el3"
                        data-selectgroup="false"
                        data-testid="group-0"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                          style="--uv_1giziax0: left;"
                        >
                          JOVIAN PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_xf61n40 uv_xf61n42d uv_xf61n45d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="jupiter"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-jupiter"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-jupiter"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Jupiter
                            </span>
                          </div>
                          <span
                            class="uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsk uv_1do42ls1d uv_1do42ls35"
                            style="--uv_1giziax0: left;"
                          >
                            Jupiter is the fifth planet from the Sun and the largest in the Solar System. It is a gas giant with a mass more than two and a half times that of all the other planets in the Solar System combined, and slightly less than one one-thousandth the mass of the Sun.
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="saturn"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-saturn"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-saturn"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Saturn
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="uranus"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-uranus"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-uranus"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Uranus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="neptune"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-neptune"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-neptune"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Neptune
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="uv_1hff1el8 uv_xf61n40 uv_xf61n42d uv_xf61n45d"
                  >
                    <div
                      class="uv_1hff1el9"
                    >
                      <button
                        class="uv_1hff1el3"
                        data-selectgroup="false"
                        data-testid="group-1"
                        tabindex="-1"
                        type="button"
                      >
                        <span
                          class="uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsp uv_1do42ls1a uv_1do42ls32"
                          style="--uv_1giziax0: left;"
                        >
                          TERRESTRIAL PLANETS
                        </span>
                      </button>
                    </div>
                    <div
                      class="uv_xf61n40 uv_xf61n42d uv_xf61n45d"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="mercury"
                        aria-selected="true"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1eld uv_1hff1ele"
                        data-testid="option-mercury"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-mercury"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Mercury
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="venus"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-venus"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-venus"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Venus
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="earth"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-earth"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-earth"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Earth
                            </span>
                          </div>
                          <span
                            class="uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsk uv_1do42ls1d uv_1do42ls35"
                            style="--uv_1giziax0: left;"
                          >
                            Our home planet
                          </span>
                        </div>
                      </div>
                      <div
                        aria-disabled="true"
                        aria-label="mars"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1elh uv_1hff1ele"
                        data-testid="option-mars"
                        id="option-3"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-mars"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Mars
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="pluto"
                        aria-selected="false"
                        class="uv_1hff1elc uv_1hff1elb uv_1hff1ela uv_1hff1ele"
                        data-testid="option-pluto"
                        id="option-4"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="uv_xf61n40 uv_xf61n41 uv_xf61n42d uv_xf61n45j"
                          data-testid="option-stack-pluto"
                        >
                          <div
                            class="uv_1hff1elq uv_xf61n40 uv_xf61n4v uv_xf61n42j uv_xf61n45j uv_xf61n477"
                          >
                            <span
                              class="uv_1hff1elp uv_1do42ls0 uv_1do42ls4 uv_1do42lsj uv_1do42ls1a"
                              style="--uv_1giziax0: left;"
                            >
                              Pluto
                            </span>
                          </div>
                          <span
                            class="uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsk uv_1do42ls1d uv_1do42ls35"
                            style="--uv_1giziax0: left;"
                          >
                            Pluto does not fit the usual classification of either terrestrial or Jovian planets, but is rocky
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_2_"
          aria-describedby="_r_2_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_2_"
              aria-expanded="false"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4ba uv_1xo4j4be"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_0_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4b4 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                style="--uv_1giziax1: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_a_"
          aria-describedby="_r_a_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_a_"
              aria-expanded="false"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4b7 uv_1xo4j4ba uv_1xo4j4be"
              data-disabled="true"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_8_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4b4 uv_1do42ls0 uv_1do42ls1 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls25"
                style="--uv_1giziax1: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkzm"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly grouped 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_q_"
          aria-describedby="_r_q_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_q_"
              aria-expanded="false"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4ba uv_1xo4j4be"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_o_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4b4 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                style="--uv_1giziax1: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should render correctly multiselect 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_i_"
          aria-describedby="_r_i_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_i_"
              aria-expanded="false"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4ba uv_1xo4j4be"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_g_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4b4 uv_1do42ls0 uv_1do42ls7 uv_1do42lsb uv_1do42lsj uv_1do42ls1d uv_1do42ls35"
                style="--uv_1giziax1: nowrap;"
              >
                Select item
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`selectInputField > should trigger events 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        aria-label="test"
        class="uv_ei8oq30"
      >
        <div
          aria-controls="_r_4g_"
          aria-describedby="_r_4g_"
          class="uv_10e61c29 uv_10e61c2b"
          tabindex="-1"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
          >
            <div
              aria-controls="_r_4g_"
              aria-expanded="false"
              class="uv_1xo4j4b6 uv_1xo4j4b5 uv_1xo4j4ba uv_1xo4j4be"
              data-disabled="false"
              data-readonly="false"
              data-testid="select-input-test"
              id="_r_4e_"
              role="combobox"
              tabindex="0"
            >
              <span
                class="uv_1xo4j4bm uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
              >
                Mercury
              </span>
              <div
                class="uv_1xo4j4b2 uv_xf61n40 uv_xf61n4d uv_xf61n42j uv_xf61n43p"
              >
                <svg
                  aria-hidden="true"
                  class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzf uv_icons_1sbwqkz1i"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
